# ComfyUI-SizeFromPresets

./: README.jp.md  README.md  __init__.py  pyproject.toml
nodes/: node.py  random.py  similar_resolution.py
presets/: sd15.csv  sdxl.csv
