[project]
name = "comfyui-sizefrompresets"
description = "Add a node that outputs width and height of the size selected from the preset (.csv)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/nkchocoai/ComfyUI-SizeFromPresets"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nkchocoai"
DisplayName = "ComfyUI-SizeFromPresets"
Icon = ""
